feat: introduce a new progress tracking system for goals and steps. Some of them. Not really realistically representative amount in.

--- a/_progress/goals/GO24-1223-075004.md
+++ b/_progress/goals/GO24-1223-075004.md
@@ -1,18 +1,19 @@
 ---
 aliases:
-  - Obsi dataview plugin fungující v terminálu. Respektive v rámci nvimu
+  - dev-env in containers
 is_subgoal_of: 
 aim: 
 about: 
-completed: 
+completed: 0
 ambitiousnes: 
 priority: 
 more_important: 
 less_important: 
-deadline: 
 tags:
+  - ft/goal
 ---
 
+# Kontejnerizovaná dev prostředí
 ```dataview
 table aliases
 from [[]]
