--- a/_progress/goals/GO24-1223-084546.md
+++ b/_progress/goals/GO24-1223-084546.md
@@ -1,18 +1,18 @@
 ---
-aliases:
-  - zabydlování popos msi ntb
+aliases: []
 is_subgoal_of: 
 aim: 
 about: 
-completed: 
+completed: 0
 ambitiousnes: 
 priority: 
 more_important: 
 less_important: 
-deadline: 
 tags:
+  - ft/goal
 ---
 
+# Mít u každého SW přesně zmapované, jaké má FEATURES, dependencies, integrations 
 ```dataview
 table aliases
 from [[]]
