--- a/_progress/steps/2024-1206-235358.md
+++ b/_progress/steps/2024-1206-235358.md
@@ -1,7 +1,7 @@
 ---
 aliases:
-  - Vytvořit template pro obsi web pluginy na popos
-is_substep_of: "[[Prods/01-pwf/_goals/GO24-1206-103140|zabydlování popos msi ntb]]"
+  - zprovozni .vimrc v obsidianu na pop msi
+is_substep_of: "[[GO24-1206-103140|zabydlování popos msi ntb]]"
 aim: 
 completed: 
 step_state: 
@@ -16,7 +16,8 @@ important:
 riskant: 
 demanding: 
 deadline: 
-tags: 
+tags:
+  - ft/step
 ---
 
 ```dataview
