--- a/_progress/steps/STP24-1223-070607.md
+++ b/_progress/steps/STP24-1223-070607.md
@@ -1,11 +1,10 @@
 ---
-aliases:
-  - Dokončit verzování konfigurací
+aliases: []
 is_substep_of: 
 aim: 
 completed: 
 step_state: 
-duration_exp: 
+duration_exp: 2hr
 duration_real: 
 requires: 
 produces: 
@@ -17,12 +16,10 @@ riskant:
 demanding: 
 deadline: 
 tags:
+  - ft/step
 ---
 
-- [ ] Obsi/Pop0
-- [ ] Obsi/mob0
-- [ ] Obsi/w0
-- [ ] nvim/m00
+# Uklidit tagy v Obsidianu a zdokumentovat jejich obsah!
 
 ```dataview
 table aliases
