--- a/_progress/steps/STP24-1223-072418.md
+++ b/_progress/steps/STP24-1223-072418.md
@@ -1,7 +1,6 @@
 ---
-aliases:
-  - zprovozni .vimrc v obsidianu na pop msi
-is_substep_of: "[[Prods/01-pwf/_goals/GO24-1206-103140|zabydlování popos msi ntb]]"
+aliases: []
+is_substep_of: 
 aim: 
 completed: 
 step_state: 
@@ -16,9 +15,11 @@ important:
 riskant: 
 demanding: 
 deadline: 
-tags: 
+tags:
+  - ft/step
 ---
 
+# vytvořit classes pro Inv a specializované Inv/...
 ```dataview
 table aliases
 from [[]]
