--- a/_progress/goals/GO24-0817-0059.md
+++ b/_progress/goals/GO24-0817-0059.md
@@ -1,6 +1,8 @@
 ---
 aliases:
   - writing longer texts
+tags:
+  - ft/goal
 ---
 
 [[Inv/SW/sameersismailobsidian-perilous-writing An Obsidian plugin which demands writing output, at the threat of bludgeoning your in-progress work.|perilous-writing -- An Obsidian plugin which demands writing output, at the threat of bludgeoning your in-progress work.]]
