docs: Update progress tracking documents

--- a/_progress/GO24-0817-0039.md
+++ b/_progress/GO24-0817-0039.md
@@ -14,7 +14,7 @@ from [[Prods/pwf/_steps/visualize answers to queries from obsidian data|visualiz
 [online](https://charts.phib.ro/Meta/Charts/Dataview+Integration)
 date: "2024-08-18 00:43:15"
 # dataview docs 
-![[Inv/SW/obsi.plugin.Dataview|obsi.plugin.Dataview]]
+![[obsi.plugin.Dataview]]
 
 # 2
 
