--- a/infrastruct/perplexity-researcher.1
+++ b/infrastruct/perplexity-researcher.1
@@ -42,8 +42,16 @@ If the server is not running, it will attempt to start it.
 .br
 .B Example:
 .br
-\fBperplexity-researcher query "What is the history of the internet?"\fR
-
+.B perplexity-researcher query "What is the history of the internet?"\fR
+.TP
+.B notebook create "\fItitle\fR"
+Creates a new NotebookLM notebook with the specified title.
+.TP
+.B notebook add-source "\fIurl\fR" [--notebook "\fItitle\fR"]
+Adds a URL source to the active or specified notebook.
+.TP
+.B notebook audio [--notebook "\fItitle\fR"]
+Generates an audio overview for the active or specified notebook.
 .SH FILES
 .TP
 .B /opt/perplexity-researcher/
