restruct project state and wrk dir

--- a/agents/Prompts/PRPT24-1208-091041.md
+++ b/agents/Prompts/PRPT24-1208-091041.md
@@ -1,12 +1,12 @@
 ---
-aliases: 
-supports: 
-about: 
-aim: 
+aliases:
+supports:
+about:
+aim:
 tags:
   - t/sys-instruction
-length: 
-latest_predecesor: "[[myDM/generated/Generates/GEN24-1208-071649|GEN24-1208-071649]]"
+length:
+latest_predecesor: "[[GEN24-1208-071649]]"
 Character:
   - Inspirator v0.0.2
 ---
